# optdnn

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  compose.yaml  config.ini  default.env  pyproject.toml
docs/: API Endpoints.md
src/: cli.py  clusters_generator.py  main.py  pr_generator.py  pyproject.toml  server.py  test_clusters_generator.py  test_models.py  test_tflite_models_cli.py
src/tests/: conftest.py  misc_tests.py  task_test.py
src/tf_optimizer/: .gitignore  configuration.py  dataset_manager.py
src/tf_optimizer/benchmarker/: benchmarker.py  model_info.py  result.py  utils.py
src/tf_optimizer/network/: client.py  file_server.py
src/tf_optimizer/optimizer/: model_handler.py  optimization_config.py  optimization_param.py  optimizer.py  optimizer_process.py  tuner.py
src/tf_optimizer/task_manager/: benchmark_result.py  edge_device.py  edge_result.py  optimization_config.py  process_error_code.py  task.py  task_manager.py
