[tool.poetry]
name = "tf-optimizer"
version = "0.1.0"
description = ""
authors = ["Luca Giovannesi <l.giovannesi@gmail.com>"]
readme = "README.md"
packages = [{ include = "src/tf_optimizer" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tensorflow-hub = "^0.13.0"
tensorflow-datasets = "^4.9.2"
tensorflow-model-optimization = "^0.7.5"
prettytable = "^3.7.0"
websockets = "^11.0.3"
nvidia-cudnn-cu11 = "8.6.0.163"
inquirer = "^3.1.3"
netifaces = "^0.11.0"
tensorflow = "^2.12.0"
matplotlib = "^3.7.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
gdown = "^4.7.1"
configparser = "^6.0.0"
tf-optimizer-core = {git = "https://gitlab.com/edgeseamless/optimizer-edge.git", subdirectory = "src"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
