[tool.poetry]
name = "tf-optimizer"
version = "0.1.0"
description = ""
authors = ["Luca Giovannesi <l.giovannesi@gmail.com>"]
readme = "README.md"
packages = [{ include = "tf_optimizer", from = "src" }]

[tool.poetry.scripts]
start = "server:start"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
tensorflow-hub = "^0.13.0"
tensorflow-datasets = "^4.9.2"
tensorflow-model-optimization = "^0.7.5"
prettytable = "^3.7.0"
websockets = "^11.0.3"
inquirer = "^3.1.3"
netifaces = "^0.11.0"
matplotlib = "^3.7.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
gdown = "^4.7.1"
configparser = "^6.0.0"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
tf-optimizer-core = {path = "./optimizer-edge", develop = true}
tensorflow = {version = "2.14.0", extras = ["and-cuda"]}
keras-flops = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
